force-app/main/default/objects/Bite__c/Bite__c.object-meta.xml
<CustomObject>
    <description>The purpose of life.</description>
    <label>Bite</label>
    <nameField>
        <label>Bite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>