force-app/main/default/objects/Bite__c/fields/Bite_Number__c.field-meta.xml
<CustomField>
    <fullName>Bite_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Bite Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>