force-app/main/default/objects/Bite__c/fields/Consumption_Month__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Month__c</fullName>
    <label>Consumption Month</label>
    <length>12</length>
    <type>Text</type>
</CustomField>