force-app/main/default/objects/Bite__c/fields/Consumption_Year__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Year__c</fullName>
    <label>Consumption Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>