force-app/main/default/objects/Bite__c/fields/Cuisine__c.field-meta.xml
<CustomField>
    <fullName>Cuisine__c</fullName>
    <label>Cuisine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Continental</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japenese</fullName>
            </value>
            <value>
                <fullName>North Indian</fullName>
            </value>
            <value>
                <fullName>South Indian</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>