force-app/main/default/objects/Bite__c/fields/Meal_Type__c.field-meta.xml
<CustomField>
    <fullName>Meal_Type__c</fullName>
    <label>Meal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Beverage</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Buffet</fullName>
            </value>
            <value>
                <fullName>Curry</fullName>
            </value>
            <value>
                <fullName>Dessert</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Dip</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Side</fullName>
            </value>
            <value>
                <fullName>Snack</fullName>
            </value>
            <value>
                <fullName>Soup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>