force-app/main/default/objects/Bite__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>