force-app/main/default/objects/Bite__c/fields/Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_Month__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year Month</label>
    <referenceTo>Year_Month__c</referenceTo>
    <relationshipLabel>Bites</relationshipLabel>
    <relationshipName>Bites</relationshipName>
    <type>Lookup</type>
</CustomField>