force-app/main/default/objects/Bite__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Bite_Number__c</columns>
    <columns>Consumption_Year__c</columns>
    <columns>Consumption_Month__c</columns>
    <columns>Year_Month__c</columns>
    <columns>NAME</columns>
    <columns>Place__c</columns>
    <columns>Cuisine__c</columns>
    <columns>Meal_Type__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>